Package_Tools/include-C/sixel/sixel.h

/* return value */
typedef int SIXELSTATUS;
#define SIXEL_SUCCEEDED(status) (((status) & 0x1000) == 0)
#define SIXEL_FAILED(status)    (((status) & 0x1000) != 0)
typedef struct sixel_allocator sixel_allocator_t;
typedef struct sixel_output sixel_output_t;
typedef struct sixel_dither sixel_dither_t;
/* create dither context object */
extern SIXELSTATUS
sixel_dither_new(
    sixel_dither_t      /* out */   **ppdither,  /* dither object to be created */
    int                 /* in */    ncolors,     /* required colors */
    sixel_allocator_t   /* in */    *allocator);
 /* allocator, null if you use
                                                    default allocator */

/* create dither context object */
// __attribute__((deprecated)) 
extern sixel_dither_t *
sixel_dither_create(int /* in */ ncolors); /* number of colors */
/* get built-in dither context object */
extern sixel_dither_t *
sixel_dither_get(int builtin_dither); /* ID of built-in dither object */
/* destroy dither context object */
extern void
sixel_dither_destroy(sixel_dither_t *dither); /* dither context object */
/* increase reference count of dither context object (thread-unsafe) */
extern void
sixel_dither_ref(sixel_dither_t *dither); /* dither context object */
/* decrease reference count of dither context object (thread-unsafe) */
extern void
sixel_dither_unref(sixel_dither_t *dither); /* dither context object */
/* initialize internal palette from specified pixel buffer */
extern SIXELSTATUS
sixel_dither_initialize(
    sixel_dither_t *dither,                    /* dither context object */
    unsigned char /* in */ *data,              /* sample image */
    int           /* in */ width,              /* image width */
    int           /* in */ height,             /* image height */
    int           /* in */ pixelformat,        /* one of enum pixelFormat */
    int           /* in */ method_for_largest, /* method for finding the largest dimension */
    int           /* in */ method_for_rep,     /* method for choosing a color from the box */
    int           /* in */ quality_mode);      /* quality of histogram processing */
/* set diffusion type, choose from enum methodForDiffuse */
extern void
sixel_dither_set_diffusion_type(
    sixel_dither_t /* in */ *dither,   /* dither context object */
    int /* in */ method_for_diffuse);  /* one of enum methodForDiffuse */
/* get number of palette colors */
extern int
sixel_dither_get_num_of_palette_colors(
    sixel_dither_t /* in */ *dither);  /* dither context object */
/* get number of histogram colors */
extern int
sixel_dither_get_num_of_histogram_colors(
    sixel_dither_t /* in */ *dither);  /* dither context object */
// __attribute__((deprecated))
extern  int /* typoed! remains for compatibility. */
sixel_dither_get_num_of_histgram_colors(
    sixel_dither_t /* in */ *dither);  /* dither context object */
/* get palette */
extern unsigned char *
sixel_dither_get_palette(
    sixel_dither_t /* in */ *dither);  /* dither context object */
/* set palette */
extern void
sixel_dither_set_palette(
    sixel_dither_t /* in */ *dither,   /* dither context object */
    unsigned char  /* in */ *palette);
/* set the factor of complexion color correcting */
extern void
sixel_dither_set_complexion_score(
    sixel_dither_t /* in */ *dither,   /* dither context object */
    int            /* in */ score);    /* complexion score (>= 1) */
/* set whether omitting palette difinition */
extern void
sixel_dither_set_body_only(
    sixel_dither_t /* in */ *dither,   /* dither context object */
    int            /* in */ bodyonly);
 /* 0: output palette section(default)
                                          1: do not output palette section */
/* set whether optimize palette size */
extern void
sixel_dither_set_optimize_palette(
    sixel_dither_t /* in */ *dither,   /* dither context object */
    int            /* in */ do_opt);
   /* 0: optimize palette size
                                          1: don't optimize palette size */
/* set pixelformat */
extern void
sixel_dither_set_pixelformat(
    sixel_dither_t /* in */ *dither,      /* dither context object */
    int            /* in */ pixelformat); /* one of enum pixelFormat */
/* set transparent */
extern void
sixel_dither_set_transparent(
    sixel_dither_t /* in */ *dither,      /* dither context object */
    int            /* in */ transparent); /* transparent color index */
/* converter API */

typedef void * (* sixel_allocator_function)(size_t size);
/* convert pixels into sixel format and write it to output context */
extern SIXELSTATUS
sixel_encode(
    unsigned char  /* in */ *pixels,     /* pixel bytes */
    int            /* in */  width,      /* image width */
    int            /* in */  height,     /* image height */
    int            /* in */  depth,      /* color depth: now unused */
    sixel_dither_t /* in */ *dither,     /* dither context */
    sixel_output_t /* in */ *context);   /* output context */
/* convert sixel data into indexed pixel bytes and palette data */
extern SIXELSTATUS
sixel_decode_raw(
    unsigned char       /* in */  *p,           /* sixel bytes */
    int                 /* in */  len,          /* size of sixel bytes */
    unsigned char       /* out */ **pixels,     /* decoded pixels */
    int                 /* out */ *pwidth,      /* image width */
    int                 /* out */ *pheight,     /* image height */
    unsigned char       /* out */ **palette,    /* ARGB palette */
    int                 /* out */ *ncolors,     /* palette size (<= 256) */
    sixel_allocator_t   /* in */  *allocator);  /* allocator object or null */
// __attribute__((deprecated))
extern  SIXELSTATUS
sixel_decode(
    unsigned char            /* in */  *sixels,    /* sixel bytes */
    int                      /* in */  size,       /* size of sixel bytes */
    unsigned char            /* out */ **pixels,   /* decoded pixels */
    int                      /* out */ *pwidth,    /* image width */
    int                      /* out */ *pheight,   /* image height */
    unsigned char            /* out */ **palette,  /* RGBA palette */
    int                      /* out */ *ncolors,   /* palette size (<= 256) */
    sixel_allocator_function /* in */  fn_malloc); /* malloc function */
extern void
sixel_helper_set_additional_message(
    const char      /* in */  *message         /* error message */
);
extern char const *
sixel_helper_get_additional_message(void);
/* convert error status code int formatted string */
extern char const *
sixel_helper_format_error(
    SIXELSTATUS     /* in */  status           /* status code */
);
/* compute pixel depth from pixelformat */
extern int
sixel_helper_compute_depth(
    int /* in */ pixelformat /* one of enum pixelFormat */
);
/* convert pixelFormat into PIXELFORMAT_RGB888 */
extern SIXELSTATUS
sixel_helper_normalize_pixelformat(
    unsigned char       /* out */ *dst,             /* destination buffer */
    int                 /* out */ *dst_pixelformat, /* converted pixelformat */
    unsigned char const /* in */  *src,             /* source pixels */
    int                 /* in */  src_pixelformat,  /* format of source image */
    int                 /* in */  width,            /* width of source image */
    int                 /* in */  height            /* height of source image */
);
/* scale image to specified size */
extern SIXELSTATUS
sixel_helper_scale_image(
    unsigned char       /* out */ *dst,                  /* destination buffer */
    unsigned char const /* in */  *src,                  /* source image data */
    int                 /* in */  srcw,                  /* source image width */
    int                 /* in */  srch,                  /* source image height */
    int                 /* in */  pixelformat,           /* one of enum pixelFormat */
    int                 /* in */  dstw,                  /* destination image width */
    int                 /* in */  dsth,                  /* destination image height */
    int                 /* in */  method_for_resampling, /* one of methodForResampling */
    sixel_allocator_t   /* in */  *allocator             /* allocator object */
);
enum imageFormat {
    FORMAT_GIF   =  0, /* read only */
    FORMAT_PNG   =  1, /* read/write */
    FORMAT_BMP   =  2, /* read only */
    FORMAT_JPG   =  3, /* read only */
    FORMAT_TGA   =  4, /* read only */
    FORMAT_WBMP  =  5, /* read only with --with-gd configure option */
    FORMAT_TIFF  =  6, /* read only */
    FORMAT_SIXEL =  7, /* read only */
    FORMAT_PNM   =  8, /* read only */
    FORMAT_GD2   =  9, /* read only with --with-gd configure option */
    FORMAT_PSD   = 10, /* read only */
    FORMAT_HDR   = 11  /* read only */
};
/* loop mode */
enum loopControl {
    LOOP_AUTO    = 0,  /* honer the setting of GIF header */
    LOOP_FORCE   = 1,  /* always enable loop */
    LOOP_DISABLE = 2   /* always disable loop */
};
typedef struct sixel_frame sixel_frame_t;
/* constructor of frame object */
extern SIXELSTATUS
sixel_frame_new(
    sixel_frame_t       /* out */ **ppframe,    /* frame object to be created */
    sixel_allocator_t   /* in */  *allocator);
  /* allocator, null if you use
                                                   default allocator */
/* deprecated version of sixel_frame_new() */
// __attribute__((deprecated))
extern  sixel_frame_t *
sixel_frame_create(void);
/* increase reference count of frame object (thread-unsafe) */
extern void
sixel_frame_ref(sixel_frame_t /* in */ *frame);
/* decrease reference count of frame object (thread-unsafe) */
extern void
sixel_frame_unref(sixel_frame_t /* in */ *frame);
/* initialize frame object with a pixel buffer */
extern SIXELSTATUS
sixel_frame_init(
    sixel_frame_t   /* in */ *frame,        /* frame object to be initialize */
    unsigned char   /* in */ *pixels,       /* pixel buffer */
    int             /* in */ width,         /* pixel width of buffer */
    int             /* in */ height,        /* pixel height of buffer */
    int             /* in */ pixelformat,   /* pixelformat of buffer */
    unsigned char   /* in */ *palette,      /* palette for buffer or NULL */
    int             /* in */ ncolors        /* number of palette colors or (-1) */
);
/* get pixels */
extern unsigned char *
sixel_frame_get_pixels(sixel_frame_t /* in */ *frame);  /* frame object */
/* get palette */
extern unsigned char *
sixel_frame_get_palette(sixel_frame_t /* in */ *frame);  /* frame object */
/* get width */
extern int
sixel_frame_get_width(sixel_frame_t /* in */ *frame);  /* frame object */
/* get height */
extern int
sixel_frame_get_height(sixel_frame_t /* in */ *frame);  /* frame object */
/* get ncolors */
extern int
sixel_frame_get_ncolors(sixel_frame_t /* in */ *frame);  /* frame object */
/* get pixelformat */
extern int
sixel_frame_get_pixelformat(sixel_frame_t /* in */ *frame);  /* frame object */
/* get transparent */
extern int
sixel_frame_get_transparent(sixel_frame_t /* in */ *frame);  /* frame object */
/* get transparent */
extern int
sixel_frame_get_multiframe(sixel_frame_t /* in */ *frame);  /* frame object */
/* get delay */
extern int
sixel_frame_get_delay(sixel_frame_t /* in */ *frame);  /* frame object */
/* get frame no */
extern int
sixel_frame_get_frame_no(sixel_frame_t /* in */ *frame);  /* frame object */
/* get loop no */
extern int
sixel_frame_get_loop_no(sixel_frame_t /* in */ *frame);  /* frame object */
/* strip alpha from RGBA/ARGB formatted pixbuf */
extern int
sixel_frame_strip_alpha(
    sixel_frame_t  /* in */ *frame,
    unsigned char  /* in */ *bgcolor);
/* resize a frame to given size with specified resampling filter */
extern SIXELSTATUS
sixel_frame_resize(
    sixel_frame_t  /* in */ *frame,
    int            /* in */ width,
    int            /* in */ height,
    int            /* in */ method_for_resampling);
/* clip frame */
extern SIXELSTATUS
sixel_frame_clip(
    sixel_frame_t  /* in */ *frame,
    int            /* in */ x,
    int            /* in */ y,
    int            /* in */ width,
    int            /* in */ height);
typedef SIXELSTATUS (* sixel_load_image_function)(
    sixel_frame_t /* in */     *frame,
    void          /* in/out */ *context);
extern SIXELSTATUS
sixel_helper_load_image_file(
    char const                /* in */     *filename,     /* source file name */
    int                       /* in */     fstatic,       /* whether to extract static image */
    int                       /* in */     fuse_palette,  /* whether to use paletted image */
    int                       /* in */     reqcolors,     /* requested number of colors */
    unsigned char             /* in */     *bgcolor,      /* background color */
    int                       /* in */     loop_control,  /* one of enum loopControl */
    sixel_load_image_function /* in */     fn_load,       /* callback */
    int                       /* in */     finsecure,     /* true if do not verify SSL */
    int const                 /* in */     *cancel_flag,  /* cancel flag */
    void                      /* in/out */ *context,      /* private data for callback */
    sixel_allocator_t         /* in */     *allocator);   /* allocator object */
/* write image to file */
extern SIXELSTATUS
sixel_helper_write_image_file(
    unsigned char       /* in */ *data,        /* source pixel data */
    int                 /* in */ width,        /* source data width */
    int                 /* in */ height,       /* source data height */
    unsigned char       /* in */ *palette,     /* palette of source data */
    int                 /* in */ pixelformat,  /* source pixelFormat */
    char const          /* in */ *filename,    /* destination filename */
    int                 /* in */ imageformat,  /* one of enum imageformat */
    sixel_allocator_t   /* in */ *allocator);  /* allocator object */
typedef struct sixel_encoder sixel_encoder_t;
/* create encoder object */
extern SIXELSTATUS
sixel_encoder_new(
    sixel_encoder_t     /* out */ **ppencoder, /* encoder object to be created */
    sixel_allocator_t   /* in */  *allocator);
 /* allocator, null if you use
                                                  default allocator */

/* deprecated version of sixel_decoder_new() */
// __attribute__((deprecated))
extern  sixel_encoder_t *
sixel_encoder_create(void);
/* increase reference count of encoder object (thread-unsafe) */
extern void
sixel_encoder_ref(sixel_encoder_t /* in */ *encoder);
/* decrease reference count of encoder object (thread-unsafe) */
extern void
sixel_encoder_unref(sixel_encoder_t /* in */ *encoder);
/* set cancel state flag to encoder object */
extern SIXELSTATUS
sixel_encoder_set_cancel_flag(
    sixel_encoder_t /* in */ *encoder,
    int             /* in */ *cancel_flag);
/* set an option flag to encoder object */
extern SIXELSTATUS
sixel_encoder_setopt(
    sixel_encoder_t /* in */ *encoder,
    int             /* in */ arg,
    char const      /* in */ *optarg);
/* load source data from specified file and encode it to SIXEL format */
extern SIXELSTATUS
sixel_encoder_encode(
    sixel_encoder_t /* in */ *encoder,
    char const      /* in */ *filename);
/* encode specified pixel data to SIXEL format
 * output to encoder->outfd */
extern SIXELSTATUS
sixel_encoder_encode_bytes(
    sixel_encoder_t     /* in */    *encoder,
    unsigned char       /* in */    *bytes,
    int                 /* in */    width,
    int                 /* in */    height,
    int                 /* in */    pixelformat,
    unsigned char       /* in */    *palette,
    int                 /* in */    ncolors);
typedef struct sixel_decoder sixel_decoder_t;
/* create decoder object */
extern SIXELSTATUS
sixel_decoder_new(
    sixel_decoder_t    /* out */ **ppdecoder,  /* decoder object to be created */
    sixel_allocator_t  /* in */  *allocator);
  /* allocator, null if you use
                                                  default allocator */

/* deprecated version of sixel_decoder_new() */
// __attribute__((deprecated))
extern  sixel_decoder_t *
sixel_decoder_create(void);
/* increase reference count of decoder object (thread-unsafe) */
extern void
sixel_decoder_ref(sixel_decoder_t *decoder);
/* decrease reference count of decoder object (thread-unsafe) */
extern void
sixel_decoder_unref(sixel_decoder_t *decoder);
/* set an option flag to decoder object */
extern SIXELSTATUS
sixel_decoder_setopt(
    sixel_decoder_t /* in */ *decoder,  /* decoder object */
    int             /* in */ arg,       /* one of SIXEL_OPTFLAG_*** */
    char const      /* in */ *optarg);  /* null or an argument of optflag */
/* load source data from stdin or the file specified with
   SIXEL_OPTFLAG_INPUT flag, and decode it */
extern SIXELSTATUS
sixel_decoder_decode(
    sixel_decoder_t /* in */ *decoder);