Packages_2024/sixel_1.10.3/fp_sixel.pas


function sixel_dither_new(ppdither: PPsixel_dither_t; ncolors: longint; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_dither_create(ncolors: longint): Psixel_dither_t; cdecl; external libsixel; deprecated;
function sixel_dither_get(builtin_dither: longint): Psixel_dither_t; cdecl; external libsixel;
procedure sixel_dither_destroy(dither: Psixel_dither_t); cdecl; external libsixel;
procedure sixel_dither_ref(dither: Psixel_dither_t); cdecl; external libsixel;
procedure sixel_dither_unref(dither: Psixel_dither_t); cdecl; external libsixel;
function sixel_dither_initialize(dither: Psixel_dither_t; data: pbyte; width: longint; height: longint; pixelformat: longint;
  method_for_largest: longint; method_for_rep: longint; quality_mode: longint): TSIXELSTATUS; cdecl; external libsixel;
procedure sixel_dither_set_diffusion_type(dither: Psixel_dither_t; method_for_diffuse: longint); cdecl; external libsixel;
function sixel_dither_get_num_of_palette_colors(dither: Psixel_dither_t): longint; cdecl; external libsixel;
function sixel_dither_get_num_of_histogram_colors(dither: Psixel_dither_t): longint; cdecl; external libsixel;
function sixel_dither_get_num_of_histgram_colors(dither: Psixel_dither_t): longint; cdecl; external libsixel; deprecated;
function sixel_dither_get_palette(dither: Psixel_dither_t): pbyte; cdecl; external libsixel;
procedure sixel_dither_set_palette(dither: Psixel_dither_t; palette: pbyte); cdecl; external libsixel;
procedure sixel_dither_set_complexion_score(dither: Psixel_dither_t; score: longint); cdecl; external libsixel;
procedure sixel_dither_set_body_only(dither: Psixel_dither_t; bodyonly: longint); cdecl; external libsixel;
procedure sixel_dither_set_optimize_palette(dither: Psixel_dither_t; do_opt: longint); cdecl; external libsixel;
procedure sixel_dither_set_pixelformat(dither: Psixel_dither_t; pixelformat: longint); cdecl; external libsixel;
procedure sixel_dither_set_transparent(dither: Psixel_dither_t; transparent: longint); cdecl; external libsixel;

type
  Tsixel_allocator_function = function(size: Tsize_t): pointer; cdecl;

function sixel_encode(pixels: pbyte; width: longint; height: longint; depth: longint; dither: Psixel_dither_t;
  context: Psixel_output_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_decode_raw(p: pbyte; len: longint; pixels: PPbyte; pwidth: Plongint; pheight: Plongint;
  palette: PPbyte; ncolors: Plongint; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_decode(sixels: pbyte; size: longint; pixels: PPbyte; pwidth: Plongint; pheight: Plongint;
  palette: PPbyte; ncolors: Plongint; fn_malloc: Tsixel_allocator_function): TSIXELSTATUS; cdecl; external libsixel;
procedure sixel_helper_set_additional_message(message: pchar); cdecl; external libsixel;
function sixel_helper_get_additional_message: pchar; cdecl; external libsixel;
function sixel_helper_format_error(status: TSIXELSTATUS): pchar; cdecl; external libsixel;
function sixel_helper_compute_depth(pixelformat: longint): longint; cdecl; external libsixel;
function sixel_helper_normalize_pixelformat(dst: pbyte; dst_pixelformat: Plongint; src: pbyte; src_pixelformat: longint; width: longint;
  height: longint): TSIXELSTATUS; cdecl; external libsixel;
function sixel_helper_scale_image(dst: pbyte; src: pbyte; srcw: longint; srch: longint; pixelformat: longint;
  dstw: longint; dsth: longint; method_for_resampling: longint; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;

type
  TimageFormat = longint;

const
  FORMAT_GIF = 0;
  FORMAT_PNG = 1;
  FORMAT_BMP = 2;
  FORMAT_JPG = 3;
  FORMAT_TGA = 4;
  FORMAT_WBMP = 5;
  FORMAT_TIFF = 6;
  FORMAT_SIXEL = 7;
  FORMAT_PNM = 8;
  FORMAT_GD2 = 9;
  FORMAT_PSD = 10;
  FORMAT_HDR = 11;

type
  TloopControl = longint;

const
  LOOP_AUTO = 0;
  LOOP_FORCE = 1;
  LOOP_DISABLE = 2;

type
  Psixel_frame_t = type Pointer;
  PPsixel_frame_t = ^Psixel_frame_t;

function sixel_frame_new(ppframe: PPsixel_frame_t; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_frame_create: Psixel_frame_t; cdecl; external libsixel; deprecated;
procedure sixel_frame_ref(frame: Psixel_frame_t); cdecl; external libsixel;
procedure sixel_frame_unref(frame: Psixel_frame_t); cdecl; external libsixel;
function sixel_frame_init(frame: Psixel_frame_t; pixels: pbyte; width: longint; height: longint; pixelformat: longint;
  palette: pbyte; ncolors: longint): TSIXELSTATUS; cdecl; external libsixel;
function sixel_frame_get_pixels(frame: Psixel_frame_t): pbyte; cdecl; external libsixel;
function sixel_frame_get_palette(frame: Psixel_frame_t): pbyte; cdecl; external libsixel;
function sixel_frame_get_width(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_height(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_ncolors(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_pixelformat(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_transparent(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_multiframe(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_delay(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_frame_no(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_get_loop_no(frame: Psixel_frame_t): longint; cdecl; external libsixel;
function sixel_frame_strip_alpha(frame: Psixel_frame_t; bgcolor: pbyte): longint; cdecl; external libsixel;
function sixel_frame_resize(frame: Psixel_frame_t; width: longint; height: longint; method_for_resampling: longint): TSIXELSTATUS; cdecl; external libsixel;
function sixel_frame_clip(frame: Psixel_frame_t; x: longint; y: longint; width: longint; height: longint): TSIXELSTATUS; cdecl; external libsixel;

type
  Tsixel_load_image_function = function(frame: Psixel_frame_t; context: pointer): TSIXELSTATUS; cdecl;

function sixel_helper_load_image_file(filename: pchar; fstatic: longint; fuse_palette: longint; reqcolors: longint; bgcolor: pbyte;
  loop_control: longint; fn_load: Tsixel_load_image_function; finsecure: longint; cancel_flag: Plongint; context: pointer;
  allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_helper_write_image_file(data: pbyte; width: longint; height: longint; palette: pbyte; pixelformat: longint;
  filename: pchar; imageformat: longint; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;

type
  Psixel_encoder_t = type Pointer;
  PPsixel_encoder_t = ^Psixel_encoder_t;

function sixel_encoder_new(ppencoder: PPsixel_encoder_t; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_encoder_create: Psixel_encoder_t; cdecl; external libsixel; deprecated;
procedure sixel_encoder_ref(encoder: Psixel_encoder_t); cdecl; external libsixel;
procedure sixel_encoder_unref(encoder: Psixel_encoder_t); cdecl; external libsixel;
function sixel_encoder_set_cancel_flag(encoder: Psixel_encoder_t; cancel_flag: Plongint): TSIXELSTATUS; cdecl; external libsixel;
function sixel_encoder_setopt(encoder: Psixel_encoder_t; arg: longint; optarg: pchar): TSIXELSTATUS; cdecl; external libsixel;
function sixel_encoder_encode(encoder: Psixel_encoder_t; filename: pchar): TSIXELSTATUS; cdecl; external libsixel;
function sixel_encoder_encode_bytes(encoder: Psixel_encoder_t; bytes: pbyte; width: longint; height: longint; pixelformat: longint;
  palette: pbyte; ncolors: longint): TSIXELSTATUS; cdecl; external libsixel;

type
  Psixel_decoder_t = type Pointer;
  PPsixel_decoder_t = ^Psixel_decoder_t;

function sixel_decoder_new(ppdecoder: PPsixel_decoder_t; allocator: Psixel_allocator_t): TSIXELSTATUS; cdecl; external libsixel;
function sixel_decoder_create: Psixel_decoder_t; cdecl; external libsixel; deprecated;
procedure sixel_decoder_ref(decoder: Psixel_decoder_t); cdecl; external libsixel;
procedure sixel_decoder_unref(decoder: Psixel_decoder_t); cdecl; external libsixel;
function sixel_decoder_setopt(decoder: Psixel_decoder_t; arg: longint; optarg: pchar): TSIXELSTATUS; cdecl; external libsixel;
function sixel_decoder_decode(decoder: Psixel_decoder_t): TSIXELSTATUS; cdecl; external libsixel;

function SIXEL_SUCCEEDED(status: longint): boolean;
function SIXEL_FAILED(status: longint): boolean;


// === Konventiert am: 4-5-25 17:26:16 ===


implementation


function SIXEL_SUCCEEDED(status: longint): boolean;
begin
  SIXEL_SUCCEEDED := status and $1000 = 0;
end;

function SIXEL_FAILED(status: longint): boolean;
begin
  SIXEL_FAILED := status and $1000 <> 0;
end;


end.
